# flax-typed

./: .gitignore  README.md  pyproject.toml
flax_typed/: __init__.py  __init__.pyi
tests/: test_typing.py
